<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Fragment_Regester"

    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background_gridiant" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_tv"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@id/tv_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        android:textAlignment="center"
        android:gravity="center"
        />


    <EditText
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:background="@drawable/shape_tv"
        android:hint="@string/email"

        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <EditText
        android:id="@+id/tv_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:background="@drawable/shape_tv"
        android:hint="@string/phone_number"

        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />

    <EditText
        android:id="@+id/tv_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:background="@drawable/shape_tv"
        android:hint="@string/password"

        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phoneNumber" />

    <EditText
        android:id="@+id/tv_repass"

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/shape_tv"
        android:hint="@string/confirm_the_password"

        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pass" />

    <Button
        android:id="@+id/btn_createAccount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_shape2"
        android:gravity="center"
        android:text="@string/create_account"
        app:backgroundTint="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_repass"

        />

</androidx.constraintlayout.widget.ConstraintLayout>