<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.New_Reports">
<TextView
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:id="@+id/tv_newReports"
    android:text="@string/new_report"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:textAlignment="center"
    android:textSize="50sp"
    android:textColor="@color/DarkBlue"
    android:layout_marginTop="30dp"

    />
    <EditText
        android:id="@+id/tv_typeReport"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/type_report"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_newReports"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/DarkBlue"
android:background="@drawable/tv_report"
        android:layout_marginRight="23dp"
        android:layout_marginLeft="23dp"
 />
    <EditText
        android:id="@+id/tv_address"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/address"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_newReports"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/DarkBlue"
android:background="@drawable/tv_report"
        android:layout_marginRight="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="80dp"
 />
    <EditText
        android:id="@+id/tv_nearest_known_location"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/nearest_known_location"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_newReports"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/DarkBlue"
        android:background="@drawable/tv_report"
        android:layout_marginRight="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="160dp"
 />
    <EditText
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:hint="@string/nearest_known_location"
        app:layout_constraintTop_toBottomOf="@id/tv_newReports"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/DarkBlue"
        android:background="@drawable/tv_report"
        android:layout_marginRight="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="240dp"
        android:gravity="start"
 />

    <ImageView
        android:id="@+id/iv_camera"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_video_camera"
        app:layout_constraintBottom_toTopOf="@id/btn_send"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@id/tv_description" />

    <ImageView
        android:id="@+id/iv_mic"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="65dp"
        android:src="@drawable/ic_microphone"
        app:layout_constraintBottom_toTopOf="@id/btn_send"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@id/tv_description" />


    <ImageView
        android:id="@+id/iv_camera1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="125dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toTopOf="@id/btn_send"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@id/tv_description" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/btn_send"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginTop="70dp"
        android:text="@string/send"/>

</androidx.constraintlayout.widget.ConstraintLayout>